apps/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend  
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      tolerations:
      - key: "CriticalAddonsOnly"
        operator: "Exists"
      - key: "app"
        operator: "Equal"
        value: "app"
        effect: "NoSchedule"
      containers:
      - name: frontend
        image: deividfoggi/myshop-frontend:v0.8
        ports:
        - containerPort: 80
