apps/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: frontend
